@@ -121,6 +121,11 @@ GDB_PY_DEFINE_EVENT_TYPE (gdb_exiting,
 			  "GDB is about to exit",
 			  event_object_type);
 
+GDB_PY_DEFINE_EVENT_TYPE (gdb_starting_session,
+			  "GdbStartingSessionEvent",
+			  "GDB is about to start an interactive session",
+			  event_object_type);
+
 GDB_PY_DEFINE_EVENT_TYPE (connection,
 			  "ConnectionEvent",
 			  "GDB connection added or removed object",
